--- a/nimbus-ui/nimbusui/src/app/components/platform/header/header-global.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/header/header-global.component.html
@@ -43,9 +43,9 @@
     </div>
     <div class="col-sm-3 d-none d-sm-inline-block p-0 ml-3 mt-1 ">
         <div class="productName  d-inline-block">
-            <nm-paragraph [element]="branding.appTitle" *ngIf="branding.appTitle"></nm-paragraph>
+            <nm-paragraph [element]="branding.appTitle" *ngIf="branding.appTitle" [ngClass]="branding.appTitle.config.uiStyles.attributes.cssClass" [hidden]="!branding.appTitle.visible"></nm-paragraph>
             <div class="subTitle" *ngIf="branding.subTitle">
-                <nm-paragraph [element]="branding.subTitle"></nm-paragraph> 
+                <nm-paragraph [element]="branding.subTitle" [ngClass]="branding.subTitle.config.uiStyles.attributes.cssClass" [hidden]="!branding.subTitle.visible"></nm-paragraph> 
             </div>
         </div>
             
