--- a/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-grid.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/card/card-details-grid.component.html
@@ -6,6 +6,7 @@
             <!-- loop thru collection elements -->
             <ng-template [ngIf]="element.config?.uiStyles?.attributes?.alias == componentTypes.cardDetail.toString()">
                 <nm-card-details 
+                    id="{{element.config?.code}}" 
                     [element]="element" 
                     [position]="!isLabelEmpty ? position+1 : position" 
                     [collectionElem]="card.collectionElem" 
