--- a/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/form.component.html
@@ -1,13 +1,13 @@
 <form id="{{formId}}" [formGroup]="form" novalidate>
     <ng-template [ngIf] = "element?.visible">
-        <nm-counter-message *ngIf="element.config?.uiStyles?.attributes?.showMessages" [element]="element" [form]="form"></nm-counter-message>
-        <nm-label *ngIf="!isLabelEmpty" [element]="element" [size]="labelSize"></nm-label>
+        <nm-counter-message id="{{element.config?.code}}" *ngIf="element.config?.uiStyles?.attributes?.showMessages" [element]="element" [form]="form"></nm-counter-message>
+        <nm-label id="{{element.config?.code}}" *ngIf="!isLabelEmpty" [element]="element" [size]="labelSize"></nm-label>
     </ng-template>
     <!-- Render form elements -->
     <ng-template [ngIf] = "formModel.length > 0">
         <ng-template ngFor let-frmElem [ngForOf]="formModel">
             <ng-template [ngIf]="frmElem.elementType == formElementType.ACCORDION.toString()">
-                <nm-accordion [element]="frmElem.param" [hidden]="!frmElem.param.visible" [elementCss]="elementCss" [form]="form" [position]="position + 1" [nmPrint]="frmElem.param">
+                <nm-accordion id="{{element.config?.code}}" [element]="frmElem.param" [hidden]="!frmElem.param.visible" [elementCss]="elementCss" [form]="form" [position]="position + 1" [nmPrint]="frmElem.param">
                 </nm-accordion>
             </ng-template>
             <ng-template [ngIf]="frmElem.elementType == formElementType.GRID.toString()">
