--- a/nimbus-ui/nimbusui/src/app/components/home/home-layout.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/home/home-layout.component.html
@@ -37,13 +37,13 @@
 	</svg>
 <nm-header-global [branding]="branding" [topMenuItems]="topMenuItems" [leftMenuItems]="leftMenuItems"></nm-header-global>
 
-<nav class="section-nav nav navbar navbar-expand-sm globalNav" role="navigation">
+<nav class="section-nav nav navbar navbar-expand-sm" [class.globalNav]="menuPanel.align !== 'VERTICAL'" role="navigation">
 	<button aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler collapsed"
 		data-target="#navbarToggler" data-toggle="collapse" type="button"> 
 		<span class="navbar-toggler-icon"></span> 
 	</button>
 	<div aria-expanded="false" class="navbar-collapse nav-block collapse" id="navbarToggler">
-		<nm-panelMenu [model]="items" [multiple]="false"></nm-panelMenu>
+		<nm-panelMenu [model]="menuPanel.menuItems" [multiple]="false"></nm-panelMenu>
 	</div>
 </nav>
 <!-- Everything after header -->
