--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -106,43 +106,21 @@
                     <td *ngIf="showColumn(col)" [ngClass]="getColumnStyle(col)">
                             <p-cellEditor>
 
-                                     <ng-template pTemplate="input" [ngIf]="showValue(col)">
-                                         
-                                    <!-- update it to nm-input and nm-combobox -->
-                                    <!-- check if we can add radio  -->
-                                        <!-- <input [title]="rowData[col.code]" 
-                                        *ngIf="col?.uiStyles?.attributes?.alias === viewComponent.gridcolumn.toString()" 
-                                        [value]="rowData[col.code]" pInputText type="text" 
-                                        [(ngModel)]="rowData[col.code]" 
-                                        [name]="col.code"> -->
+                                     <ng-template pTemplate="input" [ngIf]="showValue(col) && element.config.uiStyles.attributes.editRow">
 
-
-
-                                        <!-- <nm-input-checkbox *ngIf="col?.uiStyles?.attributes?.alias == componentTypes.checkBoxGroup.toString()" 
-                                        [element]="getElement(col)" 
-                                        [(ngModel)]="rowData[col.code]"></nm-input-checkbox> -->
-
-
-                                        <!-- <p-dropdown *ngIf="col?.uiStyles?.attributes?.alias == componentTypes.comboBox.toString()" 
-                                        [options]="getOptions(col) | selectItemPipe" 
-                                        [(ngModel)]="rowData[col.code]"></p-dropdown> -->
-
-                                        <!-- w -->
-                                        <!-- <nm-input *ngIf="col?.uiStyles?.attributes?.alias === componentTypes.textBox.toString() || col?.uiStyles?.attributes?.alias === viewComponent.gridcolumn.toString()"
-                                        [element]="getElement(col)" 
+                                        <nm-input  
+                                        *ngIf="isAdding() && TableComponentConstants.allowedInlineEditColumnStylesAlias.includes(col.uiStyles.attributes.alias)"
+                                        [element]="getViewParamInEditRow(col, rowData['elemId'])" 
                                         [(ngModel)]="rowData[col.code]"></nm-input>
 
-                                        <nm-comboBox *ngIf="col?.uiStyles?.attributes?.alias == componentTypes.comboBox.toString()" 
-                                        [element]="getElement(col)" 
-                                        [(ngModel)]="rowData[col.code]"></nm-comboBox> -->
-
-                                        <nm-input 
-                                        *ngIf="getViewParam(col, rowData['elemId']) && (col?.uiStyles?.attributes?.alias === componentTypes.textBox.toString() || col?.uiStyles?.attributes?.alias === viewComponent.gridcolumn.toString())"
-                                        [element]="getViewParam(col, rowData['elemId'])" 
+                                        <nm-input  
+                                        *ngIf="(col?.uiStyles?.attributes?.alias === componentTypes.textBox.toString() || col?.uiStyles?.attributes?.alias === viewComponent.gridcolumn.toString()) && !isAdding()"
+                                        [element]="getViewParamInEditRow(col, rowData['elemId'])" 
                                         [(ngModel)]="rowData[col.code]"></nm-input>
 
-                                        <nm-comboBox *ngIf="col?.uiStyles?.attributes?.alias == componentTypes.comboBox.toString()" 
-                                        [element]="getViewParam(col, rowData['elemId'])" 
+                                        <nm-comboBox 
+                                        *ngIf="col?.uiStyles?.attributes?.alias == componentTypes.comboBox.toString() && !isAdding()" 
+                                        [element]="getViewParamInEditRow(col, rowData['elemId'])" 
                                         [(ngModel)]="rowData[col.code]"></nm-comboBox>
 
                                      </ng-template>
@@ -152,28 +130,28 @@
                                                 </span>
                                                 <span *ngIf="col?.uiStyles?.attributes?.alias == viewComponent.link.toString()">
                                                     <nm-link
-                                                        id="{{getViewParam(col, rowData['elemId']).config?.code}}" 
-                                                        [element] = "getViewParam(col, rowData['elemId'])"
+                                                        id="{{element.tableBasedData.collectionParams[rowData['elemId']][col.code].config?.code}}" 
+                                                        [element] = "element.tableBasedData.collectionParams[rowData['elemId']][col.code]"
                                                         [rowData]="rowData">                                
                                                     </nm-link>
                                                 </span>
                                                 <span *ngIf="col?.uiStyles?.attributes?.alias == viewComponent.gridcolumn.toString() && col?.uiStyles?.attributes?.showAsLink === true">
                                                     <nm-link
-                                                        id="{{getViewParam(col, rowData['elemId']).config?.code}}"  
-                                                        [element] = "getViewParam(col, rowData['elemId'])">
+                                                        id="{{element.tableBasedData.collectionParams[rowData['elemId']][col.code].config?.code}}"  
+                                                        [element] = "element.tableBasedData.collectionParams[rowData['elemId']][col.code]">
                                                     </nm-link>
                                                 </span>
                                                 <span *ngIf="col?.uiStyles?.attributes?.alias == viewComponent.button.toString()">
                                                     <nm-button
-                                                        id="{{getViewParam(col, rowData['elemId']).config?.code}}" 
-                                                        [element] = "getViewParam(col, rowData['elemId'])">
+                                                        id="{{element.tableBasedData.collectionParams[rowData['elemId']][col.code].config?.code}}" 
+                                                        [element] = "element.tableBasedData.collectionParams[rowData['elemId']][col.code]">
                                                     </nm-button>
                                                 </span>
                                                 <span *ngIf="col?.uiStyles?.attributes?.alias == viewComponent.linkMenu.toString()">
                                                     <nm-action-dropdown #dropDown 
                                                         *ngIf = "rowData['elemId']"
-                                                        id="{{getViewParam(col, rowData['elemId'])?.config?.code}}{{rowIndex}}" 
-                                                        [element]="getViewParam(col, rowData['elemId'])" 
+                                                        id="{{element.tableBasedData.collectionParams[rowData['elemId']][col.code]?.config?.code}}{{rowIndex}}" 
+                                                        [element]="element.tableBasedData.collectionParams[rowData['elemId']][col.code]" 
                                                         [params]="col?.type?.model?.paramConfigs" 
                                                         [rowData]="rowData" 
                                                         [elementPath]="getRowPath(col, rowData)" 
