--- a/nimbus-ui/nimbusui/src/app/components/home/home-layout.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/home/home-layout.component.html
@@ -37,21 +37,11 @@
 	</svg>
 <nm-header-global [branding]="branding" [topMenuItems]="topMenuItems" [leftMenuItems]="leftMenuItems"></nm-header-global>
 
-<nav class="section-nav nav navbar navbar-expand-sm" [class.globalNav]="menuPanel?.align !== 'VERTICAL'" role="navigation">
-	<button aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler collapsed"
-		data-target="#navbarToggler" data-toggle="collapse" type="button"> 
-		<span class="navbar-toggler-icon"></span> 
-	</button>
-	<div aria-expanded="false" class="navbar-collapse nav-block collapse" id="navbarToggler">
-		<nm-panelMenu [model]="menuPanel?.menuItems" [multiple]="false"></nm-panelMenu>
-	</div>
-</nav>
+<nm-nav [cssClass]="'globalNav'" [menuPanel]="menuPanel"></nm-nav>
+
 <!-- Everything after header -->
 <nm-toast-message></nm-toast-message>
-<div class='wrapper'>
-	<div id="main-content" class="main-content" >
-	        <router-outlet></router-outlet>
-	</div><!--  END main-content  -->
-</div><!--  END wrapper  -->
+
+<router-outlet></router-outlet>
 
 <nm-footer-global [footerConfig] = "footer"></nm-footer-global>
