--- a/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
+++ b/nimbus-ui/nimbusui/src/app/components/platform/grid/table.component.html
@@ -4,7 +4,7 @@
     </button>
 </div>
 
-<div id="{{id}}"  class="scrollGrid" [hidden]="!element?.visible">
+<div id="{{id}}"  class="scrollGrid" [hidden]="!element?.visible" [ngClass]="element.config?.uiStyles?.attributes?.addRow ? 'withAddRow' : ''">
     <div class="ui-datatable-header ui-widget-header" *ngIf="element.config?.uiStyles?.attributes?.showHeader == true">
         <p-header>
             <caption>{{label}}</caption>
@@ -91,7 +91,8 @@
             </tr>
         </ng-template>
         
-        <ng-template pTemplate="body" let-rowData let-columns="columns" let-rowIndex="rowIndex" let-expanded="expanded" let-editing="editing">
+        <ng-template pTemplate="body" let-rowData let-columns="columns" let-rowIndex="rowIndex" 
+        let-expanded="expanded" let-editing="editing">
              <tr #editableRow [pSelectableRow]="rowData" [pEditableRow]="rowData" [ngClass]="rowIndex % 2 === 0 ? 'even' : 'odd'" > 
                 <td *ngIf="element.config?.uiStyles?.attributes?.rowSelection">
                     <p-tableCheckbox id="tableCheckbox{{rowIndex}}" [value]="rowData"></p-tableCheckbox>
@@ -105,26 +106,47 @@
                 <ng-template ngFor let-col let-colIndex="index" [ngForOf]="params">
                     <td *ngIf="showColumn(col)" [ngClass]="getColumnStyle(col)">
                             <p-cellEditor>
-
                                      <ng-template pTemplate="input" [ngIf]="showValue(col) && element?.config?.uiStyles?.attributes?.editRow">
 
                                         <nm-input  
                                         *ngIf="isAdding() && TableComponentConstants.allowedInlineEditColumnStylesAlias.includes(col.uiStyles.attributes.alias)"
                                         [hideLabel]=true
                                         [element]="getViewParamInEditRow(col, rowData['elemId'])" 
-                                        [(ngModel)]="rowData[col.code]"></nm-input>
+                                        [(ngModel)]="rowData[col.code]"
+                                        nmValidator
+                                        #xxxx="ngModel"></nm-input>
 
-                                        <nm-input  
+                                        <!-- <nm-input  
                                         *ngIf="!isAdding() && TableComponentConstants.allowedInlineEditNmInputComponents.includes(col.uiStyles.attributes.alias)"
                                         [hideLabel]=true
                                         [element]="getViewParamInEditRow(col, rowData['elemId'])" 
-                                        [(ngModel)]="rowData[col.code]"></nm-input>
+                                        [(ngModel)]="rowData[col.code]"
+                                        nmValidator
+                                        #xxxx="ngModel"></nm-input> -->
+
+                                  
+    <!-- <div *ngIf="!isAdding() && TableComponentConstants.allowedInlineEditNmInputComponents.includes(col.uiStyles.attributes.alias)"> -->
+
+                                        <!-- <input  
+                                        [(ngModel)]="rowData[col.code]"
+                                        required
+                                        #xxxx="ngModel"/> -->
+
+                                        <input *ngIf="!isAdding() && TableComponentConstants.allowedInlineEditNmInputComponents.includes(col.uiStyles.attributes.alias)" pInputText type="text" [(ngModel)]="rowData[col.code]"  required>
+
+        <!-- <div *ngIf="xxxx && xxxx.errors">
+        xyz...
+        {{xxxx.errors.required}}
+        </div> -->
+
+        <!-- </div> -->
+
 
                                         <nm-comboBox 
                                         *ngIf="!isAdding() && col?.uiStyles?.attributes?.alias == componentTypes.comboBox.toString()" 
                                         [hideLabel]=true
                                         [element]="getViewParamInEditRow(col, rowData['elemId'])" 
-                                        [(ngModel)]="rowData[col.code]"></nm-comboBox>
+                                        [(ngModel)]="rowData[col.code]" ></nm-comboBox>
 
                                      </ng-template>
                                     <ng-template pTemplate="output">
@@ -168,7 +190,7 @@
 
             <td style="text-align:center" *ngIf="element.config?.uiStyles?.attributes?.editRow">
                     <button *ngIf="!editing" pButton type="button" pInitEditableRow icon="pi pi-pencil" class="ui-button-info" (click)="onRowEditInitialize(rowData)"></button>
-                    <button *ngIf="editing" pButton type="button" icon="pi pi-check" class="ui-button-success" style="margin-right: .5em" (click)="onRowEditSave(rowData)"></button>
+                    <button *ngIf="editing" pButton type="button" pSaveEditableRow icon="pi pi-check" class="ui-button-success" style="margin-right: .5em" (click)="onRowEditSave(rowData)"></button>
                     <button *ngIf="editing" pButton type="button" pCancelEditableRow icon="pi pi-times" class="ui-button-danger" (click)="onRowEditCancel(rowData)"></button>
             </td>
 
@@ -200,3 +222,130 @@
         </ng-template>
     </p-table>
 </div>
+
+
+
+
+
+<h3>Row Editing</h3>
+<p-table [value]="cars2" dataKey="vin" editMode="row">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>Vin</th>
+            <th>Year</th>
+            <th>Brand</th>
+            <th>Color</th>
+            <th style="width:8em"></th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowData let-editing="editing" let-ri="rowIndex">
+        <tr [pEditableRow]="rowData">
+            <td>
+                {{rowData.vin}}
+            </td>
+            <td>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="rowData.year" required>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{rowData.year}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <p-dropdown [options]="brands" [(ngModel)]="rowData.brand" [style]="{'width':'100%'}"></p-dropdown>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{rowData.brand}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="rowData.color" required>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{rowData.color}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td style="text-align:center">
+                <button *ngIf="!editing" pButton type="button" pInitEditableRow icon="pi pi-pencil" class="ui-button-info"
+                (click)="onRowEditInit1(rowData)"></button>
+
+                <button *ngIf="editing" pButton type="button" pSaveEditableRow icon="pi pi-check" class="ui-button-success"
+                style="margin-right: .5em" (click)="onRowEditSave1(rowData)"></button>
+
+                <button *ngIf="editing" pButton type="button" pCancelEditableRow icon="pi pi-times" class="ui-button-danger"
+                (click)="onRowEditCancel1(rowData, ri)"></button>
+
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
+
+
+<h3>Row Editing---1</h3>
+<p-table [value]="cars2" dataKey="vin" editMode="row">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>Vin</th>
+            <th>Year</th>
+            <th>Brand</th>
+            <th>Color</th>
+            <th style="width:8em"></th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-rowData let-editing="editing" let-ri="rowIndex">
+        <tr [pEditableRow]="rowData">
+            <td>
+                {{rowData.vin}}
+            </td>
+            <td>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="rowData.year" required>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{rowData.year}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <p-dropdown [options]="brands" [(ngModel)]="rowData.brand" [style]="{'width':'100%'}"></p-dropdown>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{rowData.brand}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td>
+                <p-cellEditor>
+                    <ng-template pTemplate="input">
+                        <input pInputText type="text" [(ngModel)]="rowData.color" required>
+                    </ng-template>
+                    <ng-template pTemplate="output">
+                        {{rowData.color}}
+                    </ng-template>
+                </p-cellEditor>
+            </td>
+            <td style="text-align:center">
+                <button *ngIf="!editing" pButton type="button" pInitEditableRow icon="pi pi-pencil" class="ui-button-info"
+                (click)="onRowEditInit1(rowData)"></button>
+
+                <button *ngIf="editing" pButton type="button" pSaveEditableRow icon="pi pi-check" class="ui-button-success"
+                style="margin-right: .5em" (click)="onRowEditSave1(rowData)"></button>
+
+                <button *ngIf="editing" pButton type="button" pCancelEditableRow icon="pi pi-times" class="ui-button-danger"
+                (click)="onRowEditCancel1(rowData, ri)"></button>
+
+            </td>
+        </tr>
+    </ng-template>
+</p-table>
